motify the domains

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -25,5 +25,5 @@ log4j.additivity.org.springframework.web=false
 log4j.category.org.springframework.security=INFO,console
 log4j.additivity.org.springframework.security=false
 
-log4j.com.hotelgo=INFO,console
+log4j.category.com.hotelgo=DEBUG,console
 log4j.additivity.com.hotelgo=false
