--- a/src/main/resources/META-INF/env/application-dev.properties
+++ b/src/main/resources/META-INF/env/application-dev.properties
@@ -2,3 +2,8 @@ database.dataSourceClassName=org.postgresql.ds.PGSimpleDataSource
 database.serverName =jdbc:postgresql://localhost:5432/hotel_go
 database.username=admin
 database.password=password
+
+
+
+
+amazon.s3.bucket=hotelGo-service-dev
