--- a/src/main/resources/META-INF/env/application-dev.properties
+++ b/src/main/resources/META-INF/env/application-dev.properties
@@ -3,6 +3,8 @@ database.serverName =jdbc:postgresql://localhost:5432/hotel_go
 database.username=admin
 database.password=password
 
+app.support.email=HotelGo@gmail.com
+
 
 
 
